--- a/pres/ci_f23/9_27.qmd
+++ b/pres/ci_f23/9_27.qmd
@@ -698,5 +698,7 @@ Probability is obtained by likelihood of an event to occur, given data and prior
 :::
 
 ::: fragment
+www.inqs.info
+
 isaac.qs\@csuci.edu
 :::
